<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_eateries"
        android:icon="@drawable/nav_eateries_foreground"
        android:title="@string/nav_eateries" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/nav_map_foreground"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/nav_search_foreground"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/nav_favorites_foreground"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/nav_account_foreground"
        android:title="@string/nav_account" />
</menu>
